styles/style.scss
// Variables
$transition-length: 0.6s;

$header-height: 130px;
$footer-height: 90px;

$quoteElementHeight: 380px;
$quoteElementMarginTop: 50px;

$headerNFooter-bg: #fff;

$buttons-margin: 15px;
// Variables ---

// Basic styles
::-moz-selection {
    background-color: rgba(0, 0, 0, 0.2);
}

::selection {
    background-color: rgba(0, 0, 0, 0.2);
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-thumb {
    background-color: rgba($color: #4b4b4b, $alpha: 0.7);
    cursor: pointer;
}

html,
body {
    padding: 0;
    margin: 0;
    height: 100%;
}

html {
    scrollbar-color: rgba($color: #4b4b4b, $alpha: 0.7) transparent;
    scrollbar-width: thin;
}

body {
    max-width: 100vw;
    font-family: "Montserrat", sans-serif;
    background-color: #fff;
    overflow-x: hidden;
}

.container {
    width: 100%;
    max-width: 1395px;
    padding-left: 25px;
    padding-right: 25px;
    margin: 0 auto;

    &.--no-paddings {
        padding: 0;
    }
}

#overlay {
    display: none;
    position: fixed;
    width: 100%;
    height: 100%;
    z-index: 1000;

    &.--active {
        display: block;
    }
}

.bg-blur {
    display: block;
    position: fixed;
    pointer-events: none;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    z-index: 5;
    background-color: rgba(183, 183, 183, 0.8);
    opacity: 0;
    -webkit-backdrop-filter: blur(7px);
    backdrop-filter: blur(7px);
    transition: 0.4s;

    &.--active {
        pointer-events: all;
        opacity: 1;
    }
}

.logo {
    width: fit-content;
    display: flex;
    align-items: center;
    justify-content: center;

    img {
        width: 150px;
        height: auto;
        aspect-ratio: 2.2 / 1;
    }
}

.section-title {
    font-size: clamp(30px, 3vw, 35px);
    padding-right: 15px;
    text-transform: capitalize;
    line-height: 1.1;
}

.button-list {
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
    display: flex;
    align-items: center;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: -webkit-fit-content;
    width: -moz-fit-content;
    width: fit-content;
    min-width: 100px;
    padding: 5.5px 25px;
    background-color: transparent;
    border: 2px solid #ef3a32;
    border-radius: 20px;
    color: #ef3a32;
    font-weight: bold;
    text-align: center;
    transition: 0.4s;
    cursor: pointer;

    &:hover,
    &:hover a {
        color: #ffffff;
    }

    &:hover {
        background-color: #ef3a32;
    }

    a {
        transition: 0.2s;
        text-decoration: none;
        color: inherit;
    }
}

.form-btn,
.form-input {
    font-size: clamp(16px, 3vw, 19px);
    border: 2px solid #000;
    padding-top: 9px;
    padding-bottom: 9px;
}

.form-btn {
    background-color: transparent;
    transition: 0.2s;
    color: #000;
    cursor: pointer;
}

.form-input {
    padding-left: 0.75em;
    // padding-right: 0.75em;
    border-radius: 0;
    transition: $transition-length;
    background-color: transparent;
}

.form-input::-webkit-input-placeholder {
    color: #b1b1b1;
    -webkit-transition: 0.2s;
    transition: 0.2s;
}

.form-input::-moz-placeholder {
    color: #b1b1b1;
    -moz-transition: 0.2s;
    transition: 0.2s;
}

.form-input:-ms-input-placeholder {
    color: #b1b1b1;
    -ms-transition: 0.2s;
    transition: 0.2s;
}

.form-input::-ms-input-placeholder {
    color: #b1b1b1;
    -ms-transition: 0.2s;
    transition: 0.2s;
}

.form-input::placeholder {
    color: #b1b1b1;
    transition: 0.2s;
}

.form-input:focus::-webkit-input-placeholder {
    opacity: 0;
}

.form-input:focus::-moz-placeholder {
    opacity: 0;
}

.form-input:focus:-ms-input-placeholder {
    opacity: 0;
}

.form-input:focus::-ms-input-placeholder {
    opacity: 0;
}

.form-input:focus::placeholder {
    opacity: 0;
}

.burger-menu {
    width: 31px;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    z-index: 10;
    overflow: hidden;

    span {
        display: block;
        width: 100%;
        height: 3px;
        margin: 5px auto;
        transition: calc($transition-length / 100 * 50);
        background-color: #000000;
    }
}

.close-btn.--cross {
    display: flex;
    width: -webkit-fit-content !important;
    width: -moz-fit-content !important;
    width: fit-content !important;
    padding: 22px 10px;
    border-radius: 10px;
    flex-direction: column;
    justify-content: space-between;
    transition: 0.4s;
    cursor: pointer;

    &::before,
    &::after {
        content: "";
        display: block;
        width: 30px;
        height: 2px;
        margin: 0 auto;
        background: #ef3a32;
        border-radius: 10px;
        display: block;
        transition: $transition-length;
    }

    &::before {
        transform: translateY(1.2px) rotateZ(-45deg);
    }

    &::after {
        transform: translateY(-1px) rotateZ(45deg);
    }
}

.loading {
    display: block;
    position: fixed;
    bottom: 25px;
    right: -90px;
    width: 90px;
    height: 90px;
    padding: 15px 30px 15px 15px;
    font-size: 20px;
    z-index: 100;
    background-color: #fff;
    box-shadow: 0 0 10px rgba(85, 85, 85, 0.4);
    border-radius: 10px;
    transition: $transition-length;
    overflow: hidden;

    &.--active {
        right: -10px;
    }
}

.status {
    position: absolute;
    top: 50%;
    right: 100px;
    transform: translate(0, -50%);
    display: flex;
    justify-content: center;
    align-items: center;
    color: #000;
    width: -webkit-max-content;
    width: -moz-max-content;
    width: max-content;
    padding: 0 22.5px 0 20px;
    transition: $transition-length;
    font-size: clamp(20px, 3.5vw, 28px);

    &.--active {
        right: 0px;
    }

    &__text {
        margin-left: 10px;
    }
}
/* ... */

